--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,11 +3,11 @@
 @import "common/_fonts";
 @import "common/_typography";
 // blocks
-@import "blocks/_promo";
-@import "blocks/_layouts";
-@import "blocks/_header";
-@import "blocks/_main-page";
-@import "blocks/_about-travel";
-@import "blocks/_galery";
-@import "blocks/_guide-page";
-@import "blocks/_command";
+@import "blocks/_promo.scss";
+@import "blocks/_layouts.scss";
+@import "blocks/_header.scss";
+@import "blocks/_main-page.scss";
+@import "blocks/_about-travel.scss";
+@import "blocks/_gallery.scss";
+@import "blocks/_guide-page.scss";
+@import "blocks/_command.scss";
